--- a/Tienda/Views/Categoria/Index.cshtml
+++ b/Tienda/Views/Categoria/Index.cshtml
@@ -41,7 +41,7 @@
 
     else
     {
-        <p>No hay datos registrados de tipo Categoria</p>
+        <p>No hay datos registrados</p>
     }
 </div>
 
